# telegram_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: admin.py  models.py  settings.py  utrls.py
src/software/: admin.py  apps.py  constants.py  decorator.py  forms.py  models.py  utrls.py  views.py
src/software/management/commands/: run_bot.py
src/software/migrations/: 0001_initial.py  0002_alter_license_software_alter_order_license_and_more.py  0003_order_price.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py  0002_user_is_bot_available.py  0003_alter_user_is_bot_available.py
